2007-12-23  Richard Stallman  <rms@gnu.org>

	* simple.el (region-active-p): New function.
	(use-empty-active-region): New variable.

	* dired-aux.el (dired): Load dired.el at run time too.

2007-12-23  Juri Linkov  <juri@jurta.org>

	* man.el (Man-follow-manual-reference): Fill the minibuffer's
	default list with a full list of references.

	* files.el (auto-mode-alist): Add \\' to doc-view files regexp.

2007-12-23  Andreas Schwab  <schwab@suse.de>

	* files.el (switch-to-buffer-other-frame): Return the buffer
	switched to.

2007-12-23  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.12.

	* net/tramp.el: New todo item.

	* net/tramp-smb.el (tramp-smb-handle-insert-directory): Handle "-F"
	switch.  Reported by Mark T. Kennedy <mkennedy@diamondbackcap.com>.

	* net/trampver.el: Update release number.

2007-12-22  Richard Stallman  <rms@gnu.org>

	* newcomment.el (comment-region-default): Don't triple the
	comment starter if the first region line isn't indented enough.

2007-12-21  Martin Rudalics  <rudalics@gmx.at>

	* autoinsert.el (auto-insert-alist): Remove nonsensical precision
	specifier from format-string.  Reported by Ye Wenbin.

2007-12-20  Jason Rumney  <jasonr@gnu.org>

	* nxml/nxml-mode.el (nxml-faces): Rename from nxml-highlighting-faces.
	Parent group is font-lock-faces.
	(nxml-light-blue-color, nxml-dark-blue-color, nxml-green-color)
	(nxml-sky-blue-color, nxml-dark-green-color, nxml-light-green-color):
	(nxml-version): Remove.
	(nxml-delimited-data, nxml-name, nxml-ref, nxml-delimiter)
	(nxml-text, nxml-comment-content, nxml-comment-delimiter)
	(nxml-processing-instruction-delimiter)
	(nxml-processing-instruction-target)
	(nxml-processing-instruction-content, nxml-cdata-section-delimiter)
	(nxml-cdata-section-CDATA, nxml-cdata-section-content)
	(nxml-char-ref-number, nxml-char-ref-delimiter, nxml-entity-ref-name)
	(nxml-entity-ref-delimiter, nxml-tag-delimiter, nxml-tag-slash)